Features/diarias (#20)
add diaria view
