# apps/be/src/modules/diarias/dto/create-diaria.dto.ts
@@ -1,0 +1,12 @@
+import { IsDateString, IsString } from 'class-validator';
+
+export class CreateDiariaDto {
+  @IsString()
+  projetoId: string;
+
+  @IsString()
+  funcionarioId: string;
+
+  @IsDateString()
+  dia: string;
+}
