# libs/types/src/diarias.ts
@@ -1,0 +1,9 @@
+import { IDiaria, IFuncionario } from '@dougust/database';
+
+export interface IDiariaFuncionarioDto extends IFuncionario {
+  diarias: Record<string, IDiaria[]>;
+}
+
+export interface IDiariaFuncionarioResultDto {
+  funcionarios: IDiariaFuncionarioDto[];
+}
