# libs/types/src/index.ts
@@ -1,1 +1,2 @@
 export * from './projetos';
+export * from './diarias';
